--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,7 +12,7 @@
 <section class="theme_section" [ngStyle]="{'transform':'translateX('+toggleThemeBar+')'}">
     <div class="theme_container">
         <div class="setting_icon" (click)="toggleThemeBar = (toggleThemeBar == '0' ? '100%' : '0')">
-                <div class="spinner_container animation-3">
+                <div class="spinner_container animation_spinner">
                         <div class="shape shape1"></div>
                         <div class="shape shape2"></div>
                         <div class="shape shape3"></div>
