--- a/src/app/component/about/about.component.html
+++ b/src/app/component/about/about.component.html
@@ -26,7 +26,7 @@
                             is to always build products that provide pixel-perfect, performant experiences.
                         </p>
                         <p class="about_text">
-                            I have couple of hobbies but I like to travel. I have already travelled almost all the districts of our country.
+                            I have couple of hobbies but I like to travel and exp;ore the world.
                         </p>
                     </div>
                 </div>
