--- a/src/app/component/about/about.component.html
+++ b/src/app/component/about/about.component.html
@@ -9,10 +9,10 @@
                 <div class="row">
                     <div class="col-lg-3 col-sm-4">
                         <div class="photo">
-                            <img src="../../../assets/images/milan_raval.jpg" class="mr-3 img-fluid" alt="...">
+                            <img src="./assets/images/milan_raval.jpg" class="mr-3 img-fluid" alt="...">
                         </div>
                     </div>
-                    <div class="col-lg-9 col-sm-8">
+                    <div class="col-lg-9 col-sm-8 about_text">
                         <h3 class="mt-0">Milan Raval</h3>
                         <p class="location_title">
                             <i class="fa fa-map-marker mr-1" aria-hidden="true"></i>
