--- a/src/app/component/sidebar/sidebar.component.html
+++ b/src/app/component/sidebar/sidebar.component.html
@@ -1,12 +1,13 @@
-<div class="sidebar_container">
-    <button class="btn bd-search-docs-toggle d-md-none p-0 ml-3" type="button" data-toggle="collapse" data-target="#bd-docs-nav"
+<div class="sidebar_container" (click)="captureUserAction()">
+        <audio #audioPlayerElem src="./assets/audio/music.mp3" autoplay></audio>
+    <button class="btn bd-search-docs-toggle d-md-none p-0 ml-3 menu_button" type="button" data-toggle="collapse" data-target="#bd-docs-nav"
         aria-controls="bd-docs-nav" aria-expanded="true" aria-label="Toggle docs navigation">
         <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" viewBox="0 0 30 30" role="img" focusable="false">
             <title>Menu</title>
             <path stroke="currentColor" stroke-linecap="round" stroke-miterlimit="10" stroke-width="2" d="M4 7h22M4 15h22M4 23h22"></path>
         </svg>
     </button>
-    <nav class="collapse bd-links scroll full-height" id="bd-docs-nav" aria-label="Main navigation">
+    <nav class="collapse bd-links scroll full-height" id="bd-docs-nav" aria-label="Main navigation" data-toggle="collapse" data-target="#bd-docs-nav">
         <div class="bd-toc-item active">
             <ul class="nav bd-sidenav">
                     <li>
@@ -18,7 +19,6 @@
                     </a>
                 </li>
                 <li (click)="togglePause()">  
-                        <audio #audioPlayerElem src="../../../assets/audio/music.mp3" autoplay></audio>
                         
                     <div class="lines">
                         <span [ngClass]="{'animate':isPlaying}"></span>
