--- a/src/styles.css
+++ b/src/styles.css
@@ -496,8 +496,8 @@ canvas {
    }
 }
 
-@media only screen and (max-width: 600px) {
-	body{
-		font-size: 10px
+@media only screen and (max-width: 770px) {
+	.bd-sidebar {
+		min-height: 0;
 	}
 }
