--- a/src/app/component/about/about.component.html
+++ b/src/app/component/about/about.component.html
@@ -26,7 +26,7 @@
                             is to always build products that provide pixel-perfect, performant experiences.
                         </p>
                         <p class="about_text">
-                            I have couple of hobbies but I like to travel and exp;ore the world.
+                            I have couple of hobbies but I like to travel and explore the world.
                         </p>
                     </div>
                 </div>
@@ -49,7 +49,7 @@
                                     <i class="fa fa-certificate" aria-hidden="true"></i>
                                 </div>
                                 <div class="media-body">
-                                    <p class="mt-0">7+ Projects</p>
+                                    <p class="mt-0">8+ Projects</p>
                                     <span>Completed</span>
                                 </div>
                             </div>
