--- a/src/app/component/about/about.component.html
+++ b/src/app/component/about/about.component.html
@@ -18,7 +18,7 @@
                             <i class="fa fa-map-marker mr-1" aria-hidden="true"></i>
                             Bangalore, India</p>
                         <p class="about_text">
-                            Hello! I’m Milan Raval a self-taught Developer with over five years work experience. Now I’m based in Bangalore, India.
+                            Hello! I’m Milan Raval a self-taught Developer with over 8 years work experience. Now I’m based in Bangalore, India.
                             <br/>
                         </p>
                         <p class="about_text">
@@ -38,7 +38,7 @@
                                     <i class="fa fa-star" aria-hidden="true"></i>
                                 </div>
                                 <div class="media-body">
-                                    <p class="mt-0">5 years Job</p>
+                                    <p class="mt-0">8 years Job</p>
                                     <span>Experience</span>
                                 </div>
                             </div>
